--- a/style.css
+++ b/style.css
@@ -13,15 +13,7 @@
   transition: 0.3s;
 }
 
-/* @media screen and (max-width: 952px){
-    #homePage h1{
-        font-size: 25px;
-    }
-    #homePage p{
-        font-size: 15px;
-    }
-
-} */
+/*  */
 @media screen and (max-width: 927px){
     #bars{
         display: flex;
@@ -38,50 +30,4 @@
         width: 28px;
     }
 }
-/* @media screen and (max-width: 827px){
-    #homePage h1{
-        font-size: 18px;
-    }
-    #homepage p{
-        font-size: 9px;
-    }
-}
-@media screen and (max-width: 768px){
-    
-    #welcomeNote {
-      position: absolute;
-      top: 150px;
-      height: 70px;
-      
-    }
 
-    #welcomeNote h1 {
-      font-size: 14px;
-
-    }
-
-    #welcomeNote p {
-      font-size: 12px;
-    }
-
-
-
-}
-@media screen and  (max-width:514px){
-    #welcomeNote {
-      position: absolute;
-      top: 90px;
-      height: 35px;
-      border-radius: 10px;
-      line-height: 15px;
-      width: 80%;
-    }
-
-    #welcomeNote h1 {
-      font-size: 10px;
-    }
-
-    #welcomeNote p {
-      font-size: 7px;
-    }
-} */
